update link to secure https

--- a/client/login.html
+++ b/client/login.html
@@ -57,7 +57,7 @@
                 font-weight: bold;
             }
             span.icon {
-                background: url('http://developers.google.com/+/images/branding/btn_red_32.png') transparent 5px 50% no-repeat;
+                background: url('https://developers.google.com/+/images/branding/btn_red_32.png') transparent 5px 50% no-repeat;
                 display: inline-block;
                 vertical-align: middle;
                 width: 35px;
