--- a/client/decorators/MetaDecorator/DiagramDesigner/AttributeDetailsDialog.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/AttributeDetailsDialog.html
@@ -56,6 +56,7 @@
         </div>
     </div>
     <div class="modal-footer">
+        <a href="#" class="btn btn-danger btn-delete pull-left">Delete</a>
         <a href="#" class="btn btn-primary disabled btn-save">Save</a>
         <a href="#" class="btn" data-dismiss="modal">Cancel</a>
     </div>
