replace icon + with text +

--- a/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.html
@@ -2,7 +2,7 @@
     <div class="name"></div>
     <ul class="attributes unstyled"></ul>
     <div class="add-new">
-    	<i class="icon-plus"></i>Add attribute...
+    	+ Add attribute...
     </div>
     <div class='connector bottom'></div>
     <div class='connector top'></div>
