refactoring DecoratorWithPorts into ModelDecorator
refactoring and restructuring decorator

--- a/client/decorators/ModelDecorator/Core/ModelDecorator.html
+++ b/client/decorators/ModelDecorator/Core/ModelDecorator.html
@@ -1,4 +1,4 @@
-<div class="decorator-with-ports">
+<div class="model-decorator">
     <div class="name"></div>
     <div class="ports">
         <div class="left"></div>
