adding CONSTRAINT add/edit/remove option to MetaDecorator

--- a/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.html
@@ -1,8 +1,14 @@
 <div class="meta-decorator">
     <div class="name"></div>
+    <div class="attributes-title">ATTRIBUTES</div>
     <ul class="attributes unstyled"></ul>
-    <div class="add-new">
+    <div class="add-new-attribute">
     	+ Add attribute...
+    </div>
+    <div class="constraints-title">CONSTRAINTS</div>
+    <ul class="constraints unstyled"></ul>
+    <div class="add-new-constraint">
+        + Add constraint...
     </div>
     <div class='connector bottom'></div>
     <div class='connector top'></div>
