--- a/client/html/Dialogs/Projects/ProjectsDialog.html
+++ b/client/html/Dialogs/Projects/ProjectsDialog.html
@@ -4,6 +4,7 @@
         <h3>Projects</h3>
     </div>
     <div class="modal-body">
+        <div class="tabContainer"></div>
         <ul class="nav nav-pills nav-stacked">
         </ul>
     </div>
