--- a/client/html/Dialogs/Projects/ProjectsDialog.html
+++ b/client/html/Dialogs/Projects/ProjectsDialog.html
@@ -10,6 +10,7 @@
     </div>
     <div class="modal-footer">
         <div class="panel-buttons">
+            <a href="#" class="btn pull-left btn-refresh" title="Reload project list..."><i class="icon-refresh"></i></a>
             <a href="#" class="btn pull-left btn-create-new">Create new...</a>
             <a href="#" class="btn btn-primary disabled hide btn-open">Open</a>
             <a href="#" class="btn btn-danger disabled hide btn-delete">Delete</a>
