--- a/client/decorators/UMLStateMachineDecorator/Core/Diagram.html
+++ b/client/decorators/UMLStateMachineDecorator/Core/Diagram.html
@@ -36,5 +36,5 @@
 		<path fill="none" stroke="#000000" d="M160,35 L180,35 L180, 60" stroke-width="2"></path>
 		<path fill="#000000" stroke="#000000" d="M180,58 l-4,-8 l8,0z" stroke-width="2"></path>
 	</svg>
-	<div class="name"><div/>
+	<div class="name"></div>
 </div>
