--- a/client/decorators/UMLStateMachineDecorator/Core/EndState.html
+++ b/client/decorators/UMLStateMachineDecorator/Core/EndState.html
@@ -1,5 +1,10 @@
 <div class="end-state">
-	<div class="inner"></div>
+    <div class="icon">
+        <div class="inner"></div>
+    </div>
 	<div class="name"></div>
-	<div class='connector'></div>
+	<div class='connector top'></div>
+    <div class='connector bottom'></div>
+    <div class='connector left'></div>
+    <div class='connector right'></div>
 </div>
