--- a/client/js/ConstraintManager.html
+++ b/client/js/ConstraintManager.html
@@ -1,13 +1,12 @@
-<div class="modal hide fade">
+<div id="ConstraintModal" class="modal hide fade">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3>Modal header</h3>
+    <h3>Validations or Violations</h3>
   </div>
-  <div class="modal-body">
-    <p>One fine body…</p>
+  <div id="ConstraintModalBody" class="modal-body">
   </div>
   <div class="modal-footer">
-    <a href="#" class="btn">Close</a>
-    <a href="#" class="btn btn-primary">Save changes</a>
+    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <!-- <a href="#" class="btn btn-primary">Save changes</a> -->
   </div>
 </div>
