implement PointerList meta creation/edition/deletion

--- a/client/html/Widgets/MetaEditor/MetaEditorPointerNamesDialog.html
+++ b/client/html/Widgets/MetaEditor/MetaEditorPointerNamesDialog.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="panel-create-new control-group">
-            <div>
+            <div class="create">
                 Or create a new pointer:
             </div>
             <input type="text" class="input-xlarge pull-left txt-pointer-name" placeholder="New pointer name..."/>
