adding message field to constraints

--- a/client/decorators/MetaDecorator/DiagramDesigner/ConstraintDetailsDialog.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/ConstraintDetailsDialog.html
@@ -15,6 +15,12 @@
             <div class="controls">
             </div>
         </div>
+        <div class="control-group" id="pMessage">
+            <label class="control-label" for="inputMessage">Message</label>
+            <div class="controls">
+                <input type="text" class="input-xxlarge" id="inputMessage" placeholder="Message on constraint violation...">
+            </div>
+        </div>
         <div class="control-group" id="pPriority">
             <label class="control-label" for="inputPriority">Priority</label>
             <div class="controls">
