refactor Projects dialog's layout

--- a/client/html/Dialogs/Projects/ProjectsDialog.html
+++ b/client/html/Dialogs/Projects/ProjectsDialog.html
@@ -3,8 +3,10 @@
         <button type="button" class="close" data-dismiss="modal">×</button>
         <h3>Projects</h3>
     </div>
-    <div class="modal-body">
+    <div class="pre-body">
         <div class="tabContainer"></div>
+    </div>
+    <div class="modal-body">
         <ul class="nav nav-pills nav-stacked">
         </ul>
     </div>
