use CodeMirror for nicely formatted JSON print and syntax highlight

--- a/client/html/Dialogs/Export/ExportDialog.html
+++ b/client/html/Dialogs/Export/ExportDialog.html
@@ -14,7 +14,7 @@
                 Something went wrong with the export...
             </div>
             <div class="progress-bar" style="position: relative; height: 75px;"></div>
-            <textarea class="input-block-level txt-export" style="font-size: 12px; line-height: 13px" disabled></textarea>
+            <div class="txt-export"></div>
         </fieldset>
     </div>
     <div class="modal-footer">
