define asset attribute type in meta

--- a/client/decorators/MetaDecorator/DiagramDesigner/AttributeDetailsDialog.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/AttributeDetailsDialog.html
@@ -18,6 +18,7 @@
                     <option>integer</option>
                     <option>float</option>
                     <option>boolean</option>
+                    <option>asset</option>
                 </select>
             </div>
         </div>
