--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,28 @@
 
         <!-- favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+
+        <style>
+            .default-container {
+                position: absolute;
+                width: 100%; height: 86px;
+                line-height: 100%;
+                text-align: center;
+                top: 50%;
+                margin: 0 0 0 0;
+                font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+                font-size: 12px;
+            }
+
+            .default-container>span{
+                font-weight: bold;
+            }
+
+        </style>
 	</head>
     <body>
-        <div style="position: absolute; width: 100%; height: 86px;line-height: 86px;text-align: center;top: 50%;margin: -43px 0 0 0;">
-            <b>WebGME...</b>
+        <div class="default-container">
+            <span>WebGME...</span>
         </div>
     </body>
 </html>
