--- a/client/html/Dialogs/Projects/ProjectsDialog.html
+++ b/client/html/Dialogs/Projects/ProjectsDialog.html
@@ -1,4 +1,4 @@
-<div class="projects-dialog modal hide fade">
+<div class="projects-dialog modal fade">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">×</button>
         <h3>Projects</h3>
