new global disable/enable jQuery function;

--- a/client/js/Dialogs/Projects/html/ProjectsDialog.html
+++ b/client/js/Dialogs/Projects/html/ProjectsDialog.html
@@ -17,8 +17,8 @@
                     <button class="btn pull-left btn-refresh" title="Reload project list..." style="position: relative;"><i class="glyphicon glyphicon-refresh"></i></button>
                     <button class="btn pull-left btn-create-new">Create empty...</button>
                     <button class="btn pull-left btn-import-file">Create from file...</button>
-                    <button class="btn btn-primary disabled hide btn-open">Open</button>
-                    <button class="btn btn-danger disabled hide btn-delete">Delete</button>
+                    <button class="btn btn-primary btn-open">Open</button>
+                    <button class="btn btn-danger btn-delete">Delete</button>
                     <button class="btn" data-dismiss="modal">Close</button>
                 </div>
                 <div class="panel-create-new hide control-group">
