Snapshot with test code in main.js and index.html

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -27,7 +27,7 @@
 
         </style>
 	</head>
-    <body>
+    <body ng-controller="TestController">
         <div class="default-container">
             <span>WebGME...</span>
         </div>
